# iris-time-proofs

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  TODO.md  _CoqProject  coq-iris-time.opam  create-archive.sh  make_archive.sh  opam  setup.sh
attic/: Auth_min_nat.v  BankersQueue.v  Debits.v  Gen_id.v  Thunks.v
src/: Auth_mnat.v  Auth_nat.v  ClockIntegers.v  Examples.v  LibThunk.v  Makefile  Misc.v  Reduction.v  Simulation.v  Thunks.v  TimeCredits.v  TimeCreditsAltProofs.v  TimeReceipts.v  Translation.v  _CoqProject  bankersQueue.ml  bankersQueue.mli  dune  implicitQueue.ml  stream.ml  stream.mli  test.v
theories/: Auth_max_nat.v  Auth_mnat.v  Auth_nat.v  Base.v  ClockIntegers.v  Combined.v  Examples.v  Gthunks.v  MachineIntegers.v  Misc.v  PiggyBank.v  Reduction.v  Simulation.v  Tactics.v  Thunks.v  ThunksAPI.v  ThunksBase.v  ThunksExamples.v  ThunksFull.v  ThunksSimple.v  ThunksStep.v  TimeCredits.v  TimeCreditsAltProofs.v  TimeReceipts.v  Translation.v  Untranslate.v
theories/bqueue/: Code.v  Proof.v
theories/heap_lang/: LICENSE  README  adequacy.v  lang.v  lifting.v  notation.v  proofmode.v  tactics.v
theories/heap_lang/lib/: assert.v
theories/iqueue/: Code.v  Proof.v
theories/pqueue/: Code.v  Proof.v  README.md
theories/streams/: Streams.v  StreamsCode.v
theories/thunks/: GThunks.v  Generations.v  Gthunks.v  HThunks.v  LazyCode.v  PiggyBank.v  ThunksAPI.v  ThunksBase.v  ThunksCode.v  ThunksExamples.v  ThunksFull.v  ThunksSimple.v  ThunksStep.v
theories/union_find/: Code.v  Proof.v
theories/union_find/math/: Ackermann.v  Filter.v  FilterTowardsInfinity.v  InverseAckermann.v  InverseNatNat.v  LibFunOrd.v  LibIter.v  LibNatExtra.v  LibRewrite.v  MiscArith.v  TLCBuffer.v  UnionFind01Data.v  UnionFind02EmptyCreate.v  UnionFind03Link.v  UnionFind04Compress.v  UnionFind05IteratedCompression.v  UnionFind06Join.v  UnionFind11Rank.v  UnionFind12RankEmptyCreate.v  (+14 more)
