opam-version: "2.0"
maintainer: "Glen Mével"
authors: "Glen Mével, Jacques-Henri Jourdan, François Pottier, Armaël Guéneau, Arthur Charguéraud"
homepage: "https://gitlab.inria.fr/gmevel/iris-time-proofs"
bug-reports: "https://gitlab.inria.fr/gmevel/iris-time-proofs/issues"
dev-repo: "git+https://gitlab.inria.fr/gmevel/iris-time-proofs.git"

synopsis: "Iris with time credits and time credits"

depends: [
  "coq" { (>= "8.19.0" & < "8.20~") | (= "dev") }
  "coq-iris" { (= "dev.2025-08-02.3.3e83a7af") | (= "dev") }
  "coq-tlc" { (= "20240209") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
