opam-version: "2.0"
maintainer: "Glen Mével"
authors: "Glen Mével, Jacques-Henri Jourdan, François Pottier, Armaël Guéneau, Arthur Charguéraud"
homepage: "https://gitlab.inria.fr/gmevel/iris-time-proofs"
bug-reports: "https://gitlab.inria.fr/gmevel/iris-time-proofs/issues"
dev-repo: "git+https://gitlab.inria.fr/gmevel/iris-time-proofs.git"

synopsis: "Iris with time credits and time credits"

depends: [
  "rocq-core" { (>= "9.1" & < "9.2~") }
  "rocq-stdlib"
  "rocq-iris" { ((= "dev.2026-02-05.0.9815f03b" ) | (= "dev")) }
  "coq-tlc" { (= "20260120") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
